[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "packtest"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "zero5572", email = "zero5572@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "art>=6.4"
  ]

[project.urls]
Documentation = "https://github.com/zero5572/packtest#readme"
Issues = "https://github.com/zero5572/packtest/issues"
Source = "https://github.com/zero5572/packtest"

[tool.hatch.version]
path = "src/packtest/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/packtest tests}"

[tool.coverage.run]
source_pkgs = ["packtest", "tests"]
branch = true
parallel = true
omit = [
  "src/packtest/__about__.py",
]

[tool.coverage.paths]
packtest = ["src/packtest", "*/packtest/src/packtest"]
tests = ["tests", "*/packtest/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
